meta-lead-ads-package/main/default/objects/Meta_Lead_Event__e/Meta_Lead_Event__e.object-meta.xml
<CustomObject>
    <label>Meta Lead Event</label>
    <pluralLabel>Meta Lead Event</pluralLabel>
</CustomObject>