meta-lead-ads-package/main/default/objects/Meta_Lead_Event__e/fields/Leadgen_ID__c.field-meta.xml
<CustomField>
    <fullName>Leadgen_ID__c</fullName>
    <label>Leadgen ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>