meta-lead-ads-package/main/default/objects/Meta_Lead_Event__e/fields/Meta_Lead_Event__c.field-meta.xml
<CustomField>
    <fullName>Meta_Lead_Event__c</fullName>
    <label>Meta Lead Event</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>